--- a/app/src/main/res/layout/fragment_tabata.xml
+++ b/app/src/main/res/layout/fragment_tabata.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
-    android:background="@color/teal_200">
+    tools:context=".ui.tabata.TabataFragment"
+    android:background="@color/teal_700">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_tabata"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -22,11 +22,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_home"
+        android:id="@+id/fab_tabata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_baseline_filter_alt_24"
+        android:src="@drawable/ic_baseline_settings_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
