--- a/app/src/main/res/layout/fragment_nutrition.xml
+++ b/app/src/main/res/layout/fragment_nutrition.xml
@@ -28,6 +28,7 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_baseline_filter_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/fab_content_descriptor_filter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
