--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_workout"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_dumbbell_24"
         android:title="@string/title_workout" />
 
     <item
@@ -13,12 +13,12 @@
 
     <item
         android:id="@+id/navigation_nutrition"
-        android:icon="@drawable/ic_baseline_food_bank_24"
+        android:icon="@drawable/ic_food_apple_24"
         android:title="@string/title_nutrition" />
 
     <item
         android:id="@+id/navigation_stats"
-        android:icon="@drawable/ic_baseline_auto_graph_24"
+        android:icon="@drawable/ic_chart_timeline_variant_24"
         android:title="@string/title_stats" />
 
     <item
