--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.workout.WorkoutFragment"
-    android:background="@color/teal_200">
+    android:background="@color/background_surface">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
