--- a/app/src/main/res/layout/layout_workout_list_element.xml
+++ b/app/src/main/res/layout/layout_workout_list_element.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/workout_list_element"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"   android:id="@+id/workout_list_element"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#e4e400"
-    android:orientation="horizontal">
+    android:layout_height="88dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="5dp"
+    android:background="@color/background_surface"
+    >
+
+    <ImageView
+        android:id="@+id/workout_list_element_image"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:background="#252525"
+        android:src="@drawable/ic_baseline_filter_alt_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/content_descriptor_workout_list_image" />
 
     <TextView
         android:id="@+id/workout_list_element_title"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Workout Name"
-        android:textSize="60sp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:textColor="#@color/text_on_surface"
+        android:text="@string/workout_placeholder_name"
+        android:textSize="32sp"
         android:textStyle="bold"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:background="#565656"
-        />
- <ImageView
-     android:id="@+id/workout_list_element_image"
-     android:layout_width="wrap_content"
-     android:layout_height="match_parent"
-     android:layout_weight="0.5"
-     android:layout_gravity="center"
-     android:src="@drawable/ic_baseline_filter_alt_24"
-     android:background="#252525"/>
+        app:layout_constraintStart_toEndOf="@+id/workout_list_element_image"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/workout_list_element_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Workout Description"
-        android:textSize="30sp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:background="#565656"
-        />
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/text_on_surface"
+        android:text="@string/workout_placeholder_description"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/workout_list_element_image"
+        app:layout_constraintTop_toBottomOf="@+id/workout_list_element_title" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
