--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg">#FF282828</color>
+    <color name="background_surface">#FF1C1B1F</color>
+    <color name="text_on_surface">#FFE6E1E5</color>
 </resources>
