--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.stats.StatsFragment"
-    android:background="@color/purple_500">
+    android:background="@color/bg">
 
     <TextView
         android:id="@+id/text_stats"
