--- a/app/src/main/res/layout/fragment_tabata.xml
+++ b/app/src/main/res/layout/fragment_tabata.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.tabata.TabataFragment"
-    android:background="@color/teal_700">
+    android:background="@color/bg">
 
     <TextView
         android:id="@+id/text_tabata"
