--- a/app/src/main/res/layout/fragment_single_workout.xml
+++ b/app/src/main/res/layout/fragment_single_workout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.singleworkout.SingleWorkoutFragment">
+    tools:context=".ui.workout.SingleWorkoutFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
