--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/si_title"
+        android:text="@string/title_signin"
         android:theme="@style/SignTitle"
         app:layout_constraintBottom_toTopOf="@+id/si_email"
         app:layout_constraintEnd_toEndOf="parent"
