--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/su_title"
+        android:text="@string/title_signup"
         android:theme="@style/SignTitle"
         app:layout_constraintBottom_toTopOf="@+id/su_email"
         app:layout_constraintEnd_toEndOf="parent"
