--- a/app/src/main/res/layout/layout_workout_list_element.xml
+++ b/app/src/main/res/layout/layout_workout_list_element.xml
@@ -14,7 +14,7 @@
         android:id="@+id/workout_list_element_image"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:background="#252525"
+        android:background="#1E1E1E"
         android:src="@drawable/ic_baseline_filter_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
