--- a/app/src/main/res/layout/fragment_single_workout.xml
+++ b/app/src/main/res/layout/fragment_single_workout.xml
@@ -19,6 +19,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+
+
     <TextView
         android:id="@+id/single_workout_id"
         android:layout_width="wrap_content"
@@ -31,6 +33,19 @@
         android:text="@string/workout_placeholder_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/icon_like"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="112dp"
+        android:enabled="false"
+        android:contentDescription="@string/like_icon"
+        android:src="@drawable/ic_baseline_thumb_up_24"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/single_workout_category"
@@ -50,9 +65,9 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/img_gym_stock"
-        android:scaleType="centerCrop"
         android:contentDescription="@string/content_descriptor_workout_list_image"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_gym_stock"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_back" />
@@ -89,5 +104,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/single_workout_name"
         app:layout_constraintVertical_bias="0.0" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_like"
+        android:enabled="false"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_baseline_thumb_up_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/fab_content_descriptor_filter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
