--- a/app/src/main/res/layout/layout_workout_list_element.xml
+++ b/app/src/main/res/layout/layout_workout_list_element.xml
@@ -56,5 +56,14 @@
         app:layout_constraintStart_toEndOf="@+id/workout_list_element_image"
         app:layout_constraintTop_toBottomOf="@+id/workout_list_element_name" />
 
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
